..F....... [ZBXNEXT-5252] fixed widget hintbox not overflowing over another widgets

--- a/frontends/php/assets/styles/hc-dark.css
+++ b/frontends/php/assets/styles/hc-dark.css
@@ -2341,14 +2341,12 @@ button[disabled], button[disabled]:hover, button[disabled]:active {
   z-index: 1000; }
 
 .dashbrd-grid-widget-content {
-  position: absolute;
-  top: 2rem;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  flex-grow: 1;
+  margin-top: 2rem;
   padding-bottom: 8px;
   overflow: hidden;
-  z-index: 3; }
+  border: 1px solid #444;
+  background-color: #000; }
   .dashbrd-grid-widget-content.scrollable {
     overflow: auto; }
   .dashbrd-grid-widget-content .list-table {
@@ -2365,7 +2363,6 @@ button[disabled], button[disabled]:hover, button[disabled]:active {
     margin: 0 10px; }
 
 .dashbrd-grid-widget {
-  display: flex;
   position: absolute; }
   .dashbrd-grid-widget .dashbrd-grid-widget-actions {
     opacity: 0;
@@ -2381,20 +2378,18 @@ button[disabled], button[disabled]:hover, button[disabled]:active {
   .layout-kioskmode.kiosk-slide-lines-2 {
     margin-top: 4rem; }
 
-.dashbrd-grid-container.dashbrd-mode-edit .dashbrd-grid-widget .dashbrd-grid-widget-actions,
-.dashbrd-grid-container .dashbrd-grid-widget-focus .dashbrd-grid-widget-actions,
-.dashbrd-grid-container .dashbrd-grid-widget:hover .dashbrd-grid-widget-actions {
-  opacity: 1;
-  filter: alpha(opacity=100); }
-.dashbrd-grid-container .dashbrd-grid-widget-focus.dashbrd-grid-widget-hidden-header .dashbrd-grid-widget-container,
-.dashbrd-grid-container .dashbrd-grid-widget:hover.dashbrd-grid-widget-hidden-header .dashbrd-grid-widget-container {
-  margin-top: -2rem; }
-.dashbrd-grid-container .dashbrd-grid-widget-focus.dashbrd-grid-widget-hidden-header .dashbrd-grid-widget-head,
-.dashbrd-grid-container .dashbrd-grid-widget:hover.dashbrd-grid-widget-hidden-header .dashbrd-grid-widget-head {
-  box-shadow: 0 -6px 8px -2px rgba(128, 128, 128, 0.15); }
-.dashbrd-grid-container .dashbrd-grid-widget-focus.dashbrd-grid-widget-hidden-header .dashbrd-grid-widget-content,
-.dashbrd-grid-container .dashbrd-grid-widget:hover.dashbrd-grid-widget-hidden-header .dashbrd-grid-widget-content {
-  top: 2rem; }
+.dashbrd-grid-container {
+  z-index: 3; }
+  .dashbrd-grid-container.dashbrd-mode-edit .dashbrd-grid-widget .dashbrd-grid-widget-actions,
+  .dashbrd-grid-container .dashbrd-grid-widget-focus .dashbrd-grid-widget-actions,
+  .dashbrd-grid-container .dashbrd-grid-widget:hover .dashbrd-grid-widget-actions {
+    opacity: 1;
+    filter: alpha(opacity=100); }
+  .dashbrd-grid-container .dashbrd-grid-widget-focus.dashbrd-grid-widget-hidden-header .dashbrd-grid-widget-head,
+  .dashbrd-grid-container .dashbrd-grid-widget:hover.dashbrd-grid-widget-hidden-header .dashbrd-grid-widget-head {
+    height: 2rem;
+    margin-top: -2rem;
+    box-shadow: 0 -6px 8px -2px rgba(128, 128, 128, 0.15); }
 
 .dashbrd-grid-widget-container {
   position: absolute;
@@ -2402,9 +2397,8 @@ button[disabled], button[disabled]:hover, button[disabled]:active {
   left: 0.25rem;
   right: 0.25rem;
   bottom: 0.25rem;
-  background-color: #000;
-  border: 1px solid #444;
-  z-index: 3; }
+  display: flex;
+  flex-direction: column; }
 
 .dashbrd-grid-widget-head {
   position: absolute;
@@ -2414,10 +2408,14 @@ button[disabled], button[disabled]:hover, button[disabled]:active {
   height: 2rem;
   padding-left: 10px;
   display: flex;
+  flex-direction: row;
   align-items: flex-start;
   flex-wrap: nowrap;
   overflow: hidden;
-  z-index: 2; }
+  border: 1px solid #444;
+  border-bottom: 0;
+  background-color: #000;
+  z-index: 1; }
   .dashbrd-grid-widget-head h4 {
     flex-grow: 1;
     margin-top: .5rem;
@@ -2431,18 +2429,13 @@ button[disabled], button[disabled]:hover, button[disabled]:active {
       .dashbrd-grid-widget-head ul li select {
         margin: 4px 0; }
 
-.dashbrd-grid-widget.dashbrd-grid-widget-hidden-header .dashbrd-grid-widget-container {
-  transition: margin-top .3s; }
 .dashbrd-grid-widget.dashbrd-grid-widget-hidden-header .dashbrd-grid-widget-head {
+  height: 0;
   box-shadow: 0 -6px 8px -2px rgba(128, 128, 128, 0);
-  transition: box-shadow .3s;
-  z-index: 4; }
+  transition: height .3s, margin-top .3s, box-shadow .3s; }
 .dashbrd-grid-widget.dashbrd-grid-widget-hidden-header .dashbrd-grid-widget-content {
-  top: 0;
-  padding-top: 8px;
-  background-color: #000;
-  transition: top .3s;
-  z-index: 5; }
+  margin-top: 0;
+  padding-top: 8px; }
 
 .dashbrd-grid-container .dashbrd-grid-iterator {
   position: absolute; }
@@ -2451,8 +2444,7 @@ button[disabled], button[disabled]:hover, button[disabled]:active {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    z-index: 3; }
+    height: 100%; }
   .dashbrd-grid-container .dashbrd-grid-iterator .dashbrd-grid-iterator-head {
     position: absolute;
     top: .25rem;
@@ -2467,7 +2459,7 @@ button[disabled], button[disabled]:hover, button[disabled]:active {
     border: 1px solid #444;
     border-bottom: 0;
     background-color: #000;
-    transition: margin-top .3s, height .3s, opacity .3s, box-shadow .3s;
+    transition: margin-top .3s, height .3s, opacity 0s .3s, box-shadow .3s;
     opacity: 0; }
     .dashbrd-grid-container .dashbrd-grid-iterator .dashbrd-grid-iterator-head h4 {
       flex-grow: 1;
@@ -2498,8 +2490,7 @@ button[disabled], button[disabled]:hover, button[disabled]:active {
     right: 0;
     bottom: 0;
     overflow: visible;
-    transition: margin-top .3s;
-    z-index: 3; }
+    transition: margin-top .3s; }
   .dashbrd-grid-container .dashbrd-grid-iterator .dashbrd-grid-iterator-placeholder {
     position: absolute;
     display: flex;
@@ -2537,9 +2528,7 @@ button[disabled], button[disabled]:hover, button[disabled]:active {
     height: 2rem;
     box-shadow: 0 -6px 8px -2px rgba(128, 128, 128, 0.15);
     opacity: 1;
-    z-index: 4; }
-  .dashbrd-grid-container .dashbrd-grid-iterator.dashbrd-grid-iterator-focus .dashbrd-grid-iterator-content, .dashbrd-grid-container .dashbrd-grid-iterator:hover .dashbrd-grid-iterator-content {
-    z-index: 5; }
+    transition: margin-top .3s, height .3s, box-shadow .3s; }
   .dashbrd-grid-container .dashbrd-grid-iterator.dashbrd-grid-iterator-focus .dashbrd-grid-iterator-placeholder, .dashbrd-grid-container .dashbrd-grid-iterator:hover .dashbrd-grid-iterator-placeholder {
     opacity: 1; }
   .dashbrd-grid-container .dashbrd-grid-iterator.dashbrd-grid-iterator-hidden-header.iterator-first-row-mouseenter .dashbrd-grid-iterator-head {
